github repository link updated

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>To-Do List</h1>
+    <h1>To-Do List App</h1>
 
     <!-- Input Section -->
     <div class="input-section">
